# AdventOfCode

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
Day-1/Part-1/: CMakeLists.txt  main.cpp
Day-1/Part-2/: CMakeLists.txt  main.cpp
Day-2/Part-1/: CMakeLists.txt  main.cpp
Day-2/Part-2/: CMakeLists.txt  main.cpp
Day-3/: CMakeLists.txt
Day-3/Part-1/: CMakeLists.txt  main.cpp
Day-3/Part-2/: CMakeLists.txt  main.cpp
Day-4/Part-1/: CMakeLists.txt  main.cpp
Day-4/Part-2/: CMakeLists.txt  main.cpp
Day-5/Part-1/: CMakeLists.txt  main.cpp
Day-5/Part-2/: CMakeLists.txt  main.cpp
Day-5/Part-2-MT/: CMakeLists.txt  main.cpp
Day-6/Part-1/: CMakeLists.txt  main.cpp
Day-6/Part-2/: CMakeLists.txt  main.cpp
